app/styles/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

*, html, body, .ant-typography {
  font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
}

.ant-typography, .ant-typography p {
  margin-bottom: 0 !important;
}

html {
  font-size: 16px;
}

html, body {
  overflow-x: hidden;
}

/* Tokens */
:root {
  --color-yellow: 225 255 104;
  --color-theme: 62 177 200;
  --color-grey: 159 159 159;
  --color-primary: 44 46 53;
  /* Text, buttons, etc. */
  --color-contrast: 255 255 255;
  /* Backgrounds, borders, etc. */
  --color-accent: 62 177 200;
  /* Labels like "On sale" */
  --font-size-fine: 0.75rem;
  /* text-xs */
  --font-size-copy: 1rem;
  /* text-base */
  --font-size-lead: 1.125rem;
  /* text-lg */
  --font-size-heading: 2rem;
  /* text-2xl */
  --font-size-display: 3rem;
  /* text-4xl */
  --color-shop-pay: #3eb1c8;
  --shop-pay-button--width: 100%;
  /* Sets the width for the shop-pay-button web component */
  --height-nav: 4rem;
  --screen-height: 100vh;
  --screen-height-dynamic: 100vh;

  @media (min-width: 640px) {
    --height-nav: 4rem;
  }

  @media (min-width: 768px) {
    --height-nav: 6rem;
    --font-size-heading: 2.25rem;
    /* text-4xl */
    --font-size-display: 3.75rem;
    /* text-6xl */
  }

  @supports (height: 100svh) {
    --screen-height: 100svh;
  }

  @supports (height: 100dvh) {
    --screen-height-dynamic: 100dvh;
  }
}

/* @media (prefers-color-scheme: dark) {
  :root {
    --color-primary: 250 250 250;
    --color-contrast: 32 33 36;
    --color-accent: 235 86 40;
  }
} */

@keyframes fadeInAnimation {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

shop-pay-button {
  width: 100%;
  height: 3rem;
  display: table;
}

.ant-carousel .slick-slide img.block {
  display: block;
}

.ant-carousel .slick-slide img.hidden {
  display: none;
}

@media (min-width: 768px) {
  .ant-carousel .slick-slide img.hidden.md\:block {
    display: block;
  }

  .ant-carousel .slick-slide img.block.md\:hidden {
    display: none;
  }
}

@layer base {
  * {
    font-variant-ligatures: none;
  }

  body {
    @apply border-primary/10 bg-contrast text-primary/90 antialiased;
  }

  html {
    scroll-padding-top: 10rem;
  }

  model-viewer::part(default-progress-mask) {
    display: none;
  }

  model-viewer::part(default-progress-bar) {
    display: none;
  }

  input[type='search']::-webkit-search-decoration,
  input[type='search']::-webkit-search-cancel-button,
  input[type='search']::-webkit-search-results-button,
  input[type='search']::-webkit-search-results-decoration {
    -webkit-appearance: none;
  }

  a.active {
    @apply border-b;
  }

  .prose {

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      &:first-child {
        @apply mt-0;
      }
    }
  }
}

@layer components {
  .article {

    h2,
    h3,
    h4,
    h5,
    h6 {
      @apply font-sans text-primary;
    }

    @apply prose mx-auto mb-12 grid justify-center font-serif text-primary;

    p,
    ul,
    li {
      @apply mb-4 text-lg;
    }

    img {
      @apply md:-mx-8 lg:-mx-16;

      @media (min-width: 48em) {
        width: calc(100% + 4rem);
        max-width: 100vw;
      }

      @media (min-width: 64em) {
        width: calc(100% + 8rem);
      }
    }
  }

  .swimlane {
    @apply grid w-full snap-x snap-mandatory scroll-px-6 grid-flow-col justify-start gap-4 overflow-x-scroll px-6 pb-4;
  }
}

@layer utilities {
  .fadeIn {
    opacity: 0;
    animation: fadeInAnimation ease 500ms forwards;
  }

  .hiddenScroll {
    scrollbar-width: none;

    &::-webkit-scrollbar {
      display: none;
    }
  }

  .absolute-center {
    @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2;
  }

  .strike {
    position: relative;

    &::before {
      content: '';
      display: block;
      position: absolute;
      width: 108%;
      height: 1.5px;
      left: -4%;
      top: 50%;
      transform: translateY(-50%);
      background: rgb(var(--color-primary));
      box-shadow: 0.5px 0.5px 0px 0.5px rgb(var(--color-contrast));
    }
  }

  .card-image {
    @apply relative flex items-center justify-center overflow-clip rounded;

    &::before {
      content: ' ';
      @apply absolute top-0 left-0 z-10 block h-full w-full rounded shadow-border;
    }

    img {
      @apply aspect-[inherit] w-full object-cover;
    }
  }
}

/* Custom CSS for antd */
.ant-menu-light:not(.ant-menu-horizontal) .ant-menu-submenu-title:active,
.ant-menu-light:not(.ant-menu-horizontal) .ant-menu-submenu-title:hover,
.ant-menu-light:not(.ant-menu-horizontal) .ant-menu-item:not(.ant-menu-item-selected):active,
.ant-menu-light:not(.ant-menu-horizontal) .ant-menu-item:not(.ant-menu-item-selected):hover,
.ant-menu-light.ant-menu-inline .ant-menu-sub.ant-menu-inline,
.ant-menu-light>.ant-menu.ant-menu-inline .ant-menu-sub.ant-menu-inline {
  background-color: transparent !important;
}

.ant-menu-submenu i.ant-menu-submenu-arrow::before {
  content: url('/app/assets/arrow-closed.svg');
  transform: none;
  position: initial;
  background-color: transparent;
  border-radius: 0;
  transition: none;
  line-height: 1;
  height: 15px;
}

.ant-menu-submenu.ant-menu-submenu-open i.ant-menu-submenu-arrow::before {
  content: url('/app/assets/arrow-opened.svg');
  transform: none !important;
  position: initial;
  background-color: transparent;
  border-radius: 0;
  transition: none;
  line-height: 1;
  height: 15px;
}

li.ant-menu-submenu,
li.ant-menu-item {
  margin-bottom: 15px !important;
}

i.ant-menu-submenu-arrow {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  transition: none !important;
  transform: none;
  height: 40px;
}

.ant-menu .ant-menu-submenu-open.ant-menu-submenu-inline>.ant-menu-submenu-title>.ant-menu-submenu-arrow {
  transform: translateY(-50%);
}

.ant-menu-submenu i.ant-menu-submenu-arrow::after,
.ant-menu-submenu.ant-menu-submenu-open i.ant-menu-submenu-arrow::after {
  content: none;
  transform: none !important;
  position: initial;
  background-color: transparent;
  border-radius: 0;
  transition: none;
}

.ant-menu .ant-menu-title-content {
  display: flex;
  flex-direction: column;
  width: auto;
  flex-direction: row;
  justify-content: flex-start;
}

ul.ant-menu-sub li.ant-menu-item .ant-menu-title-content a {
  font-size: 18px;
  color: rgb(var(--color-grey));
  font-weight: 500;
}

ul.ant-menu-sub li.ant-menu-item {
  height: 20px;
  line-height: 1;
  /* padding-left: 20px !important; */
}

.ant-menu .ant-menu-submenu-arrow {
  width: 30px;
}

.ant-menu-inline.ant-menu-root .ant-menu-item>.ant-menu-title-content {
  overflow: visible !important;
}

.ant-menu-inline.ant-menu-root .ant-menu-item,
.ant-menu-inline.ant-menu-root .ant-menu-submenu-title {
  padding-left: 1rem !important;
}

.ant-carousel {
  margin-bottom: 50px;
}

.ant-carousel .slick-dots li button {
  width: 10px;
  height: 10px;
  border-radius: 100%;
}

.ant-carousel .slick-dots li.slick-active button {
  background-color: rgb(var(--color-theme));
}

.ant-carousel .slick-dots li {
  transition: none;
  flex: none;
}

.ant-carousel .slick-dots li.slick-active {
  width: 16px;
}

.ant-carousel .slick-dots li button::after {
  inset: 0;
}

.ant-carousel .slick-prev,
.ant-carousel .slick-next,
.ant-carousel .slick-prev::after,
.ant-carousel .slick-next::after {
  width: 30px;
  height: 30px;
  transform: none;
  border: none;
  opacity: 1;
}

.ant-carousel .slick-prev {
  top: calc(100% + 10px);
  right: 90px;
  left: auto;
}

.ant-carousel .slick-next {
  top: calc(100% + 10px);
  right: 30px;
  left: auto;
}

.ant-carousel .slick-prev::after {
  content: url('/app/assets//arrow-left.svg');
}

.ant-carousel .slick-next::after {
  content: url('/app/assets//arrow-right.svg');
}

/* .ant-carousel .slick-slider,
.ant-carousel .slick-slider .slick-track,
.ant-carousel .slick-slider .slick-list {
  touch-action: none;
  -ms-touch-action: none;
} */

@keyframes ticker-kf {
  0% {
    transform: translateX(0);
  }

  100% {
    /* 10rem for each logo x 6 logos total = -60rem */
    transform: translateX(calc(-120rem + 100vw));
  }
}

@keyframes ticker-rev {
  0% {
    transform: translateX(calc(-120rem + 100vw));
  }

  100% {
    /* 10rem for each logo x 6 logos total = -60rem */
    transform: translateX(0);
  }
}

.ticker-div {
  animation: ticker-kf 10s linear infinite;
}

.ticker-div-rev {
  animation: ticker-rev 10s linear infinite;
}

.ticker-div img, .ticker-div-rev img {
  width: 10rem;
  flex: none;
  /* padding: 0 1rem 0 1rem; */
  align-self: flex-start;
  max-width: 100%;
  height: auto;
}

.ant-card .ant-card-cover >* {
  border-radius: 0;
}

.ant-card-cover {
  width: 100%;
  height: 100%;
}

.ant-card-body {
  position: absolute;
  left: 0;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
  width: 100%;
  height: 100%;
}

@media (max-width: 767px) {
  .mobile-border {
    border-bottom: 2px solid #fff;
  }

  .ant-carousel .slick-dots {
    display: none !important;
  }
}

